--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ body {
     text-align: center;
 }
 
-.about-me {
+.about-me, .work, .contact {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
@@ -67,14 +67,17 @@ body {
     text-align: justify;
 }
 
-.bio-photo {
-    width: 40%;
-    margin-left: 20px;
+.content p, .content ul {
+    padding: 10px 60px 10px 20px;
 }
 
-.content p, .content ul {
-    padding: 10px 60px 10px 60px;
+.content img{
+    width: 300px;
+    height: 350px;
+    margin-left: 20px;
+    margin-top: 10px;
 }
+
 
 .contact ul {
     text-align: center;
@@ -151,6 +154,11 @@ body {
     .box {
         display: flex;
         margin-top: 20px;
+    }
+
+    .content img{
+        width: 300px;
+        height: 350px;
     }
 
 }
