--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,26 @@ body {
     text-align: center;
 }
 
+.img-box{
+    text-align: center;
+}
+
+.about-content img {
+    width: 300px;
+    height: 350px;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.about-content {
+    width: 100%;
+    text-align: justify;
+}
+
+.about-content p {
+    padding: 10px 60px 10px 60px;
+}
+
 .about-me, .work, .contact {
     display: flex;
     flex-direction: column;
@@ -68,16 +88,8 @@ body {
 }
 
 .content p, .content ul {
-    padding: 10px 60px 10px 20px;
+    padding: 10px 60px 10px 60px;
 }
-
-.content img{
-    width: 300px;
-    height: 350px;
-    margin-left: 20px;
-    margin-top: 10px;
-}
-
 
 .contact ul {
     text-align: center;
@@ -130,13 +142,17 @@ body {
         font-size: 35px;
         margin-left: 2px;
     }
-    
-    .about-me {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
+
+    .about-content p {
+        padding: 10px 60px 10px 20px;
     }
-    
+
+    .about-content {
+        width: 60%;
+        text-align: left;
+        border-left: 2px solid black;
+    }
+
     .content {
         width: 60%;
         text-align: left;
@@ -147,9 +163,7 @@ body {
         padding: 0 20px 20px 20px;
     }
 
-    .contact li {
-        margin-left: 20px;
-    }
+   
     
     .box {
         display: flex;
@@ -161,4 +175,11 @@ body {
         height: 350px;
     }
 
+    .contact li {
+        margin-left: 20px;
+    }
+
+    .contact-content {
+        border-left: 2px solid black;
+    }
 }
