--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,17 +9,19 @@
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 40px;
     background: black;
 }
 
 header h1 {
+    text-align: center;
     letter-spacing: 3px;
     color: white;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-around;
 }
 
 ul {
@@ -107,22 +109,22 @@ body {
 
 
 @media screen and (min-width: 768px) {
-    header {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-end;
-    }
-
+    
     header h1 {
         font-size: 45px;
+        margin: 0 20px;
     }
 
-    nav a {
-        margin-left: 15px;
+    li a {
+        margin: 0 40px;
     }
 
     li {
         display: inline-block;
+    }
+
+    nav ul {
+        justify-content: center;
     }
 
     nav a {
