--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --main-font: 'Open Sans', sans-serif;
-    --font-color: #2b2a29;
+    --font-color: #202020;
     --header-color: #f3f1f1;
 }
 
@@ -19,7 +19,6 @@ header {
 }
 
 header h1 {
-    font-size: 25px;
     text-transform: uppercase;
     letter-spacing: 15px;
     color: var(--font-color);
@@ -79,10 +78,6 @@ body {
     width: 265px;
 }
 
-.about-me h2, .work h2, .contact h2 {
-    font-size: 35px;
-}
-
 .content {
     text-align: justify;
 }
@@ -93,13 +88,23 @@ body {
     margin-top: 5px;
 }
 
+
 .featured-projects {
     display: flex;
     flex-direction: column;
 }
 
-.main-marketing-container {
+.featured-projects h2 {
+    font-family: var(--main-font);
+    color: var(--font-color);
     text-align: center;
+    margin-bottom: 10px;
+}
+
+.main-project-container h3, .bar-container h3, .record-container h3 {
+    font-family: var(--main-font);
+    color: var(--font-color);
+    font-size: 20px;
 }
 
 .marketing {
@@ -121,8 +126,12 @@ body {
     width: 100%;
 }
 
+.box {
+    text-align: center;
+}
+
 .contact {
-    padding-bottom: 40px;
+    padding: 40px 0 40px 0;
 }
 
 .about-content p, .content p {
@@ -132,6 +141,20 @@ body {
     margin-right: 5px;
 }
 
+.box h2 {
+    font-family: var(--main-font);
+    color: var(--font-color);
+}
+
+footer {
+    margin-bottom: 10px;
+}
+
+footer h4 {
+    text-align: center;
+    font-family: var(--main-font);
+    color: var(--font-color);
+}
 
 @media screen and (min-width: 768px) {
 
@@ -205,13 +228,13 @@ body {
         justify-content: flex-end;
         margin-top: 10px;
     }
-    
 
-    .featured h2, .contact h2 {
-        font-size: 35px
+    .box {
+        text-align: center;
     }
 
-    @media screen and (max-width: 800px) {
+    
+    @media screen and (max-width: 843px) {
         header {
             display: flex;
             flex-wrap: wrap;
