--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,8 @@ header h1 {
     letter-spacing: 15px;
     color: var(--font-color);
     font-family: var(--main-font);
+    font-size: 30px;
+    font-weight: 100;
 }
 
 ul {
@@ -56,6 +58,10 @@ nav a {
     color: var(--font-color);
     padding-bottom: 2px;
     padding-right: 10px;
+}
+
+nav a:hover {
+    opacity: .6;
 }
 
 body {
@@ -191,6 +197,8 @@ footer h4 {
     color: var(--header-color);
 }
 
+/*responsive screen layout below*/
+
 @media screen and (min-width: 768px) {
 
     header {
@@ -273,6 +281,7 @@ footer h4 {
         text-align: center;
     }
 
+/*below css prevents the nav bar from wraping underneath itself and insetad wraps under h1 with a max width of 843px*/
     
     @media screen and (max-width: 843px) {
         header {
