--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,16 @@
 h1, 
 h2 {
     text-transform: uppercase;
+    font-family: var(--main-font);
+}
+
+.mainworkh2 {
+    text-align: center;
+    font-family: var(--main-font);
+    letter-spacing: 15px;
+    font-size: 30px;
+    font-weight: 100;
+    margin: 20px 0;
 }
 
 
@@ -108,6 +118,7 @@ body {
 
 .featured-projects {
     display: flex;
+    align-items: flex-end;
     flex-direction: column;
 }
 
@@ -118,7 +129,7 @@ body {
     margin-bottom: 10px;
 }
 
-.main-project-container h3, .bar-container h3, .record-container h3 {
+.main-project-container h3, .bar-container h3, .record-container h3, h3 {
     font-family: var(--main-font);
     color: var(--font-color);
     font-size: 20px;
@@ -139,11 +150,15 @@ body {
     filter: blur(2px);
 }
 
+.schedule-container img:hover {
+    filter: blur(2px);
+}
+
 .marketing {
     width: 100%;
 }
 
-.bar-container, .record-container {
+.bar-container, .record-container, .schedule-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -157,7 +172,7 @@ body {
     margin-bottom: 20px;
 }
 
-.record, .bar  {
+.record, .bar , .daily-work-schedule{
     width: 100%;
 }
 
@@ -195,6 +210,19 @@ footer h4 {
     text-align: center;
     font-family: var(--main-font);
     color: var(--header-color);
+}
+
+.findme {
+    margin-right: 5px;
+}
+
+.bi {
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.bi-linkedin {
+    color: #3b5998;
 }
 
 /*responsive screen layout below*/
@@ -260,9 +288,9 @@ footer h4 {
         width: 700px;
     }
     
-    .record, .bar  {
+    .record, .bar , .daily-work-schedule{
         width: 320px;
-        height: 478.22px;
+        height: 165px;
     }
 
     .main-project-container h3, .bar-container h3, .record-container h3 {
