--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,9 @@ body {
     margin-bottom: 20px;
 }
 
+.bar-container, .record-container {
+    margin-right: 10px;
+}
 .secondary-project-container {
     display: flex;
     flex-direction: column;
