--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,13 @@ footer h4 {
     font-size: 20px;
 }
 
+.bi-github {
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    margin-left: 5px;
+}
+
 .bi-linkedin {
     color: #3b5998;
 }
